# openclaw-deployer

./: README.md  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/ui/: index.tsx
src/i18n/: en.ts  index.ts  zh.ts
src/pages/: AgentSettings.tsx  ChannelSettings.tsx  ChatPage.tsx  Dashboard.tsx  GatewaySettings.tsx  InstallPage.tsx  InstancesPage.tsx  RawConfig.tsx  SecurityPage.tsx  SessionsPage.tsx  ToolsSettings.tsx  UsagePage.tsx
src/services/: config.ts  gatewayWs.ts
src/store/: index.ts
src/types/: index.ts
