[package]
name = "openclaw-deployer"
version = "0.2.0"
description = "OpenClaw Config Manager — Tauri2 desktop app for managing OpenClaw configuration"
authors = ["you"]
edition = "2021"

[lib]
name = "openclaw_deployer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["process", "time", "rt-multi-thread", "macros", "io-util", "sync"] }

# 系统信息
sysinfo = "0.32"

# 跨平台目录
dirs = "5"
